--- a/CommonAsteroids/pom.xml
+++ b/CommonAsteroids/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dk.sdu.mmmi.cbse</groupId>
         <artifactId>asteroids.jpms</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <artifactId>CommonAsteroids</artifactId>
     <packaging>jar</packaging>
