--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -29,6 +29,8 @@ jobs:
 
     - run: mvn versions:update-child-modules
 
+    - uses: stefanzweifel/git-auto-commit-action@v4
+
     - name: Push tag
       uses: mathieudutour/github-tag-action@v6.1
       with:
