--- a/CommonEnemy/pom.xml
+++ b/CommonEnemy/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>dk.sdu.mmmi.cbse</groupId>
             <artifactId>Common</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
