--- a/FXGL/pom.xml
+++ b/FXGL/pom.xml
@@ -25,16 +25,16 @@
     <properties>
         <java>java</java>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>dk.sdu.mmmi.cbse</groupId>
-                <artifactId>shadedlibgdx</artifactId>
-                <version>1.0.46</version>
+                <groupId>com.github.almasb</groupId>
+                <artifactId>fxgl</artifactId>
+                <version>17.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -162,15 +162,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-          <id>github</id>
-          <repositories>
-          <repository>
-            <id>ratgen</id>
-            <url>https://maven.pkg.github.com/ratgen/*</url>
-          </repository>
-        </repositories>
         </profile>
     </profiles>
 </project>
