--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <dependency>
                 <groupId>dk.sdu.mmmi.cbse</groupId>
                 <artifactId>shadedlibgdx</artifactId>
-                <version>1.0.42</version>
+                <version>1.0.50</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -91,6 +91,7 @@
                         in "java.lang.module.FindException: Module monitor.observer.zero not found";
                         strange... -->
                         <!--<argument>&#45;&#45;add-modules=monitor.observer.zero</argument>-->
+                        <argument>-agentlib:jdwp=transport=dt_socket, server=y,suspend=y, address=127.0.0 .1:8000</argument>
                         <argument>--module=Core/dk.sdu.mmmi.cbse.main.Main</argument>
                     </arguments>
                 </configuration>
